update wiki backup

--- a/Website/index.html
+++ b/Website/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Project U">
-  <meta property="og:type" content="">
+  <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.projectu.link/">
   <meta property="og:image" content="icon.png">
 
@@ -51,7 +51,7 @@
     </p></br>
 
     <h2>Why you should care</h2>
-    <p>You should care because some technologies utilised in Project U will eventually be deployed to the wider population. Specifically the neural interface that allows the reading of somebody's thoughts. It is only a matter of time and progress before they gain the ability to make that dystopian nightmare our reality. They were able to implant these technologies into my body without my knowledge or consent, and they will eventually figure out how to do that at a much larger scale. You may believe that nobody would be foolish enough to want that outcome, but this group possesses an extreme capacity for <a href="https://www.projectu.link/mediawiki/index.php/The_Network#Self_delusions">self-delusion</a>. They would find a way to justify this action, telling themselves they were simply try to help humanity.
+    <p>You should care because some technologies utilised in Project U will eventually be deployed to the wider population. Specifically the neural interface that allows the reading of somebody's thoughts. It is only a matter of time and progress before they gain the ability to make that dystopian nightmare our reality. They were able to implant these technologies into my body without my knowledge or consent, and they will eventually figure out how to do that at a much larger scale. You may believe that nobody would be foolish enough to want that outcome, but this group possesses an extreme capacity for <a href="https://www.projectu.link/mediawiki/index.php/The_Network#Self_delusions">self-delusion</a>. They would find a way to justify this action.
     </p></br>
 
     <h2>Can I prove it?</h2>
@@ -61,7 +61,7 @@
 
     <h2>So what now?</h2>
     <p>
-      My first priority is to provide conclusive, peer reviewed evidence of at least one my implants to enable me to take my story to the media. It should not prove too difficult, I have outlined various ways <a href="https://www.projectu.link/mediawiki/index.php/How_I_Know_I_Have_A_Neural_Interface#Obtaining conclusive evidence">here</a>. If you think you can help me with that please contact me at <a href="mailto:mk.ultra.zero@pm.me">mk.ultra.zero@pm.me</a>
+      My first priority is to provide conclusive, peer reviewed evidence of at least one my implants to enable me to take my story to the media. It should not prove too difficult, I have outlined various ways <a href="https://www.projectu.link/mediawiki/index.php/How_I_Know_I_Have_A_Neural_Interface#Obtaining conclusive evidence">here</a>. If you think you can help, please contact me at <a href="mailto:mk.ultra.zero@pm.me">mk.ultra.zero@pm.me</a>
       </br></br>
       Once the alarm is sounded I'd expect several things to happen. Facilities must be made available so that anyone can check to see if they have been implanted with a device without their consent. Hopefully all the other test subjects can be found. In the longer term we must put protections in place to minimise the danger that humanity goes any further down this very dark path. Laws must be implemented and international treaties signed to prevent the further proliferation of such technologies.
     </p></br>
@@ -71,7 +71,7 @@
       Wiki providing detailed information: <a href="https://www.projectu.link/mediawiki">Link</a></br>
       Same information in a PDF document: <a href="https://www.projectu.link/projectu.pdf">Link</a></br></br>
 
-      I have created repositories containing all files. You can find them hosted on  <a href="https://www.projectu.link/projectu.pdf">Proton Drive</a></br> and  <a href="https://github.com/mk-ultra-zero/projectu">GitHub</a></br></br>
+      I have created repositories containing all files. You can find them hosted on  <a href="https://drive.protonmail.com/urls/806Z3FBFM0#6z7IHs94cd77">Proton Drive</a></br> and  <a href="https://github.com/mk-ultra-zero/projectu">GitHub</a></br></br>
 
       Contact me: <a href="mailto:mk.ultra.zero@pm.me">mk.ultra.zero@pm.me</a>
     </p>
