final major updates

--- a/Website/index.html
+++ b/Website/index.html
@@ -28,7 +28,7 @@
     </br>
     <h1>Project U</h1>
     <p>
-      The purpose of this website is to raise awareness of Project U. At the moment few are aware of its existence and therefore unaware of the serious threat that it poses to the public.
+      The purpose of this website is to document my knowledge of Project U. At the moment few are aware of its existence and therefore unaware of the serious threat that it poses to the public.
     </p></br>
 
     <h2>What is Project U?</h2>
