--- a/Website/index.html
+++ b/Website/index.html
@@ -69,7 +69,7 @@
     <h2>Resources</h2>
     <p>
       Wiki providing detailed information: <a href="https://www.projectu.link/mediawiki">Link</a></br>
-      Same information in a PDF document: <a href="https://www.projectu.link/projectu.pdf">Link</a></br></br>
+      Same information in a PDF document: <a href="https://raw.githubusercontent.com/mk-ultra-zero/projectu/main/Documents/Project%20U.pdf">Link</a></br></br>
 
       I have created repositories containing all files. You can find them hosted on  <a href="https://drive.protonmail.com/urls/806Z3FBFM0#6z7IHs94cd77">Proton Drive</a></br> and  <a href="https://github.com/mk-ultra-zero/projectu">GitHub</a></br></br>
 
